--- a/_includes/link.html
+++ b/_includes/link.html
@@ -1,2 +1,1 @@
-<a href="https://github.com/KingFelix/emerald/archive/master.zip">Download</a>
-<a href="https://www.linkedin.com/in/joshepblanco/">Project on Github</a>
+<a href="https://www.linkedin.com/in/joshepblanco/">Perfil en Linkedin</a>
