--- a/_includes/Pagina.html
+++ b/_includes/Pagina.html
@@ -1,1 +1,1 @@
-<p align="justify">width="933" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiM2QwMzkxMjUtNzkwYy00M2U5LWFjODItY2UyOTliNzYyNzNiIiwidCI6ImE1MDc2MmM0LWM1YWQtNDEzYS1hMDVlLTlmZmUxNTc1Mjg4MiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe></p>
+<iframe width="933" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiM2QwMzkxMjUtNzkwYy00M2U5LWFjODItY2UyOTliNzYyNzNiIiwidCI6ImE1MDc2MmM0LWM1YWQtNDEzYS1hMDVlLTlmZmUxNTc1Mjg4MiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
