--- a/_includes/Pagina.html
+++ b/_includes/Pagina.html
@@ -1,2 +1,2 @@
 <iframe width="933" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiM2QwMzkxMjUtNzkwYy00M2U5LWFjODItY2UyOTliNzYyNzNiIiwidCI6ImE1MDc2MmM0LWM1YWQtNDEzYS1hMDVlLTlmZmUxNTc1Mjg4MiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
-<iframe width="933" height="700" src="https://datastudio.google.com/open/1a7qodaUlGz5RDXlo7E4-ckMuDKSS649A" frameborder="0" allowFullScreen="true"></iframe>
+<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1a7qodaUlGz5RDXlo7E4-ckMuDKSS649A/page/NGH2" frameborder="0" style="border:0" allowfullscreen></iframe>
