--- a/_includes/Pagina.html
+++ b/_includes/Pagina.html
@@ -1,5 +1,11 @@
-<div class="embed-responsive embed-responsive-16by9">
-<iframe width="600" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiM2QwMzkxMjUtNzkwYy00M2U5LWFjODItY2UyOTliNzYyNzNiIiwidCI6ImE1MDc2MmM0LWM1YWQtNDEzYS1hMDVlLTlmZmUxNTc1Mjg4MiIsImMiOjR9" frameborder="0" allowFullScreen="true"></iframe>
+<style>
+.responsive {
+  max-width: 100%;
+  height: auto;
+}
+</style>
+
+<iframe width="600" height="700" src="https://app.powerbi.com/view?r=eyJrIjoiM2QwMzkxMjUtNzkwYy00M2U5LWFjODItY2UyOTliNzYyNzNiIiwidCI6ImE1MDc2MmM0LWM1YWQtNDEzYS1hMDVlLTlmZmUxNTc1Mjg4MiIsImMiOjR9" frameborder="0" allowFullScreen="true" class ="responsive"></iframe>
 
 
 <iframe width="600" height="470" src="https://datastudio.google.com/embed/reporting/1a7qodaUlGz5RDXlo7E4-ckMuDKSS649A/page/NGH2" frameborder="0" style="border:0" allowfullscreen></iframe>
