--- a/_includes/Pagina.html
+++ b/_includes/Pagina.html
@@ -1,9 +1,17 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+img {
+  width: 100%;
+  height: auto;
+}
+</style>
+</head>
 
 <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 <style>
 .responsive {
-  max-width: 500px;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
 }
 </style>
 
