--- a/_includes/Pagina.html
+++ b/_includes/Pagina.html
@@ -5,7 +5,6 @@ img {
   height: auto;
 }
 </style>
-</head>
 
 <meta name="viewport" content="width=device-width, user-scalable=0, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 <style>
@@ -16,6 +15,6 @@ img {
 </style>
 
 <div class='section content'>
-<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1a7qodaUlGz5RDXlo7E4-ckMuDKSS649A/page/NGH2" frameborder="0" style="border:0" allowfullscreen></iframe>
+<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1a7qodaUlGz5RDXlo7E4-ckMuDKSS649A/page/NGH2" frameborder="0" style="width:100%;" allowfullscreen></iframe>
   
   </div>
