--- a/_includes/Pagina.html
+++ b/_includes/Pagina.html
@@ -15,6 +15,6 @@ img {
 </style>
 
 <div class='section content'>
-<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1a7qodaUlGz5RDXlo7E4-ckMuDKSS649A/page/NGH2" frameborder="0" style="width:100%;" allowfullscreen></iframe>
+<iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/1a7qodaUlGz5RDXlo7E4-ckMuDKSS649A/page/NGH2" frameborder="0" style="max-width:100%;height:auto;"" allowfullscreen></iframe>
   
   </div>
